distribution/oidc-authservice/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  serviceName: authservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice 
    spec:
      containers:
      - name: authservice
      #try this docker.io/library/oidc-authservice
        image: k8scc01covidacr.azurecr.io/oidc-authservice:latest
        imagePullPolicy: Always
        ports:
        - name: http-api
          containerPort: 8080
        volumeMounts:
          - name: data
            mountPath: /var/lib/authservice  
        readinessProbe:
            httpGet:
              path: /
              port: 8081
      securityContext:
        fsGroup: 111
      #imagePullSecrets: 
      #  - name: k8scc01covidacr-registry-connection
      #this imagepullsecrets is something we want deployed but not when we are testing locally.
      # would need to create our own secrets to put whenever we do something locally.
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: authservice-pvc #value comes from pvc.yaml in upstream, unchanged in 1.2 -> 1.3

# 1.3 https://github.com/kubeflow/manifests/blob/v1.3-branch/common/oidc-authservice/base/statefulset.yaml
# 1.2 https://github.com/kubeflow/manifests/blob/v1.2-branch/istio/oidc-authservice/base/statefulset.yaml
# Is very similar to 1.2 with a few changes and the imagePullSecrets
